--- a/examples/docker/nginx/etc/nginx.conf
+++ b/examples/docker/nginx/etc/nginx.conf
@@ -12,13 +12,22 @@ server {
 
     location /you/ {
         proxy_pass http://squashfs-httpd:8080/you/;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     location /me/ {
         proxy_pass http://squashfs-httpd:8080/me/;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 
     location /all/ {
         proxy_pass http://squashfs-httpd:8080/all/;
+        proxy_buffering off;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
     }
 }
